[package]
name = "rShare"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
dotenvy ="0.15.7"
mime_guess = "2.0.5"
once_cell = "1.21.3"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.11"

[features]

